fix: hide page scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -209,7 +209,12 @@
   }
   html {
     @apply scroll-smooth;
-    scrollbar-gutter: stable;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar {
+    display: none;
   }
   body {
     @apply bg-background text-foreground;
